[gd_scene load_steps=4 format=3 uid="uid://d334ejncdcxvp"]

[ext_resource type="Script" uid="uid://b51vahgpsto6n" path="res://scripts/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cqs0nhx8genoj" path="res://scenes/sprite_view.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bfmw5guap3mvv" path="res://scenes/layer_view.tscn" id="3_h2yge"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(640, 360)
editor_draw_limits = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="HUD"]
offset_top = 32.0
offset_right = 1280.0
offset_bottom = 96.0
current_tab = 0

[node name="Tiles" type="TabContainer" parent="HUD/TabContainer"]
layout_mode = 2
current_tab = 0
metadata/_tab_index = 0

[node name="Tile View" parent="HUD/TabContainer/Tiles" instance=ExtResource("2_0xm2m")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Layer View" parent="HUD/TabContainer/Tiles" instance=ExtResource("3_h2yge")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Stage View" type="Control" parent="HUD/TabContainer/Tiles"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="animToggle" type="CheckButton" parent="HUD/TabContainer/Tiles/Stage View"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0
text = " Toggle Animations"

[node name="OpenBGButton" type="Button" parent="HUD"]
offset_right = 64.0
offset_bottom = 32.0
text = "Open"

[node name="SaveBGButton" type="Button" parent="HUD"]
offset_left = 68.0
offset_right = 132.0
offset_bottom = 32.0
text = "Save"

[node name="ImportObj" type="Button" parent="HUD"]
offset_left = 136.0
offset_right = 264.0
offset_bottom = 32.0
text = "Import Object"

[node name="ExportObj" type="Button" parent="HUD"]
visible = false
offset_left = 268.0
offset_right = 396.0
offset_bottom = 32.0
text = "Export Object"

[node name="DeleteObj" type="Button" parent="HUD"]
visible = false
offset_left = 400.0
offset_right = 528.0
offset_bottom = 32.0
text = "Delete Object"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.cmp", "*.bin", "*.lot")
show_hidden_files = true
use_native_dialog = true

[node name="Layers" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="tab_changed" from="HUD/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="tab_changed" from="HUD/TabContainer/Tiles" to="." method="_on_tiles_tab_changed"]
[connection signal="pressed" from="HUD/OpenBGButton" to="." method="_on_open_bg_button_pressed"]
[connection signal="pressed" from="HUD/SaveBGButton" to="." method="_on_save_bg_button_pressed"]
[connection signal="pressed" from="HUD/ImportObj" to="." method="_on_import_obj_pressed"]
[connection signal="pressed" from="HUD/ExportObj" to="." method="_on_export_obj_pressed"]
[connection signal="pressed" from="HUD/DeleteObj" to="." method="_on_delete_obj_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
